[project]
name = "routegrade-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "email-validator>=2.0",
    "fastapi>=0.139.0",
    "geoalchemy2>=0.20.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.9",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
